# acq-btf-with-aries

./: README.md  acq.py  acq_btf.py  acq_presets.py  auto_calib.py  calib_cam_pos.py  calib_cam_stage.csv  calib_cam_stage.py  calib_utils.py  debayer.py  mannual_calib.py  npz2jpg.py  preview_calib.py  pyproject.toml  test_ready.py  transcoord.py
sample/: ar_markers.py  camera_matrix.npy  corresponds.csv  corresponds.npy
