[tool.poetry]
name = "acq-btf-with-aries"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aries-controller = "^0.5.0"
easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
numpy = "^1.19.2"
scipy = "^1.5.2"
tqdm = "^4.50.0"
pandas = "^1.1.2"
colour-demosaicing = "^0.1.5"
nptyping = "^1.3.0"
opencv-contrib-python = "^4.4.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ptpython = "^3.0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
