[tool.poetry]
name = "acq-btf-with-aries"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aries_controller = "^0.6"
easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
numpy = "^1.19"
scipy = "^1.5"
tqdm = "^4.50"
pandas = "^1.1"
colour-demosaicing = "^0.1.5"
nptyping = "^1.3"
opencv-contrib-python = "^4.4"
matplotlib = "^3.3"

[tool.poetry.dev-dependencies]
black = "*"
ptpython = "^3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
